@@ -7,43 +7,36 @@ import com.example.demo.repository.AssetLifecycleEventRepository;
 import com.example.demo.repository.AssetRepository;
 import com.example.demo.service.AssetLifecycleEventService;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 
 @Service
-@Transactional
 public class AssetLifecycleEventServiceImpl implements AssetLifecycleEventService {
 
     private final AssetLifecycleEventRepository eventRepository;
     private final AssetRepository assetRepository;
 
-    public AssetLifecycleEventServiceImpl(
-            AssetLifecycleEventRepository eventRepository,
-            AssetRepository assetRepository) {
-
+    public AssetLifecycleEventServiceImpl(AssetLifecycleEventRepository eventRepository, 
+                                        AssetRepository assetRepository) {
         this.eventRepository = eventRepository;
         this.assetRepository = assetRepository;
     }
 
     @Override
     public AssetLifecycleEvent logEvent(Long assetId, AssetLifecycleEvent event) {
-
         Asset asset = assetRepository.findById(assetId)
                 .orElseThrow(() -> new ResourceNotFoundException("Asset not found"));
 
-        if (event.getEventType() == null || event.getEventType().isBlank()) {
+        if (event.getEventType() == null || event.getEventType().trim().isEmpty()) {
             throw new IllegalArgumentException("Event type is required");
         }
 
-        if (event.getEventDescription() == null || event.getEventDescription().isBlank()) {
+        if (event.getEventDescription() == null || event.getEventDescription().trim().isEmpty()) {
             throw new IllegalArgumentException("Event description is required");
         }
 
-        if (event.getEventDate() == null ||
-                event.getEventDate().isAfter(LocalDate.now())) {
+        if (event.getEventDate().isAfter(LocalDate.now())) {
             throw new IllegalArgumentException("Event date cannot be in the future");
         }
 
@@ -55,11 +48,9 @@ public class AssetLifecycleEventServiceImpl implements AssetLifecycleEventServic
 
     @Override
     public List<AssetLifecycleEvent> getEventsForAsset(Long assetId) {
-
         if (!assetRepository.existsById(assetId)) {
             throw new ResourceNotFoundException("Asset not found");
         }
-
         return eventRepository.findByAssetIdOrderByEventDateDesc(assetId);
     }
 }
